--- a/.github/workflows/libcxx-build-containers.yml
+++ b/.github/workflows/libcxx-build-containers.yml
@@ -29,6 +29,8 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     if: github.repository_owner == 'llvm'
+    permissions:
+      packages: write
 
     steps:
     - uses: actions/checkout@v4
@@ -36,10 +38,14 @@ jobs:
     - name: Build the Linux builder image
       working-directory: libcxx/utils/ci
       run: docker compose build actions-builder
+      env:
+        TAG: ${{ github.sha }}
 
     # - name: Build the Android builder image
     #   working-directory: libcxx/utils/ci
     #   run: docker compose build android-buildkite-builder
+    #   env:
+    #     TAG: ${{ github.sha }}
 
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
